--- a/scilab/modules/scicos/Makefile.in
+++ b/scilab/modules/scicos/Makefile.in
@@ -345,9 +345,8 @@ DATA = $(libsciscicos_la_etc_DATA) $(libsciscicos_la_help_en_US_DATA) \
 	$(libsciscicos_la_sci_gateway_DATA) \
 	$(nobase_libsciscicos_la_cosf_DATA)
 am__libsciscicos_la_include_HEADERS_DIST = src/c/noscicos/resource.h \
-	includes/scicos.h includes/gw_scicos.h includes/scicos-def.h \
-	includes/scicos_free.h includes/scicos_malloc.h \
-	includes/scicos_math.h
+	includes/scicos.h includes/scicos-def.h includes/scicos_free.h \
+	includes/scicos_malloc.h
 HEADERS = $(libsciscicos_la_include_HEADERS)
 ETAGS = etags
 CTAGS = ctags
@@ -802,11 +801,9 @@ HELP_CHAPTERLANG = en_US fr_FR pt_BR
 @SCICOS_TRUE@libsciscicos_la_includedir = $(pkgincludedir)/scicos
 @SCICOS_FALSE@libsciscicos_la_include_HEADERS = src/c/noscicos/resource.h
 @SCICOS_TRUE@libsciscicos_la_include_HEADERS = includes/scicos.h \
-@SCICOS_TRUE@includes/gw_scicos.h \
 @SCICOS_TRUE@includes/scicos-def.h \
 @SCICOS_TRUE@includes/scicos_free.h \
-@SCICOS_TRUE@includes/scicos_malloc.h \
-@SCICOS_TRUE@includes/scicos_math.h
+@SCICOS_TRUE@includes/scicos_malloc.h
 
 
 #### scicos : cosf files ####
