--- a/scilab/modules/scicos/Makefile.am
+++ b/scilab/modules/scicos/Makefile.am
@@ -163,11 +163,10 @@ libsciscicos_la_sci_gateway_DATA = sci_gateway/scicos_gateway.xml
 #### scicos : include files ####
 libsciscicos_la_includedir=$(pkgincludedir)/scicos
 libsciscicos_la_include_HEADERS = includes/scicos.h \
-includes/gw_scicos.h \
 includes/scicos-def.h \
 includes/scicos_free.h \
-includes/scicos_malloc.h \
-includes/scicos_math.h
+includes/scicos_malloc.h
+
 
 #### scicos : cosf files ####
 libsciscicos_la_cosfdir=$(mydatadir)
