jvm_options moved from modules/jvm to etc to highlight and facilitates it uses

--- a/scilab/Makefile.am
+++ b/scilab/Makefile.am
@@ -100,7 +100,8 @@ $(top_srcdir)/etc/scilab.quit \
 $(top_srcdir)/etc/modules.xml \
 $(top_srcdir)/etc/classpath.xml \
 $(top_srcdir)/etc/librarypath.xml \
-$(top_srcdir)/etc/toolboxes.xml
+$(top_srcdir)/etc/toolboxes.xml \
+$(top_srcdir)/etc/jvm_options.xml
 
 
 infofilesdir=$(pkgdatadir)/
