--- a/scilab/modules/xcos/Makefile.in
+++ b/scilab/modules/xcos/Makefile.in
@@ -63,10 +63,10 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
+@GUI_TRUE@am__append_1 = libscixcos.la 
 DIST_COMMON = $(libscixcos_la_include_HEADERS) $(srcdir)/Makefile.am \
 	$(srcdir)/Makefile.in $(top_srcdir)/Makefile.incl.am
-@NEED_JAVA_TRUE@am__append_1 = java
-@GUI_TRUE@am__append_2 = libscixcos.la 
+@NEED_JAVA_TRUE@am__append_2 = java
 subdir = modules/xcos
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/m4/docbook.m4 \
@@ -418,6 +418,70 @@ libscixcos_la_etcdir = $(mydatadir)/etc
 libscixcos_la_etc_DATA = etc/xcos.quit \
 etc/xcos.start
 
+XCOS_C_SOURCES = 
+XCOS_CPP_SOURCES = src/cpp/callxcos.cpp \
+			src/jni/Xcos.cpp \
+			src/jni/Xcos.hxx \
+			src/jni/Signal.cpp \
+			src/jni/Signal.hxx
+
+GIWS_WRAPPERS = src/jni/Xcos.giws.xml \
+src/jni/XcosUtils.giws.xml
+
+@GIWS_TRUE@BUILT_SOURCES = giws
+GATEWAY_C_SOURCES = sci_gateway/c/gw_xcos.c
+GATEWAY_CPP_SOURCES = sci_gateway/cpp/sci_Xcos.cpp \
+sci_gateway/cpp/sci_xcosNotify.cpp 
+
+libscixcos_la_CFLAGS = $(JAVA_JNI_INCLUDE) \
+			-I$(top_srcdir)/libs/MALLOC/includes/ \
+			-I$(top_srcdir)/modules/jvm/includes/ \
+			-I$(top_srcdir)/modules/output_stream/includes \
+			-I$(top_srcdir)/modules/localization/includes \
+			-I$(top_srcdir)/modules/api_scilab/includes	
+
+libscixcos_la_CPPFLAGS = $(JAVA_JNI_INCLUDE) \
+			-I$(srcdir)/includes/ \
+			-I$(srcdir)/src/jni/ \
+			-I$(srcdir)/src/cpp/ \
+			-I$(srcdir)/src/c/ \
+	 		-I$(top_srcdir)/modules/jvm/includes/ \
+			-I$(top_srcdir)/modules/output_stream/includes \
+			-I$(top_srcdir)/modules/localization/includes \
+                        -I$(top_srcdir)/modules/scicos_blocks/src/jni \
+			-I$(top_srcdir)/modules/api_scilab/includes
+
+
+# Without the xcos module 
+libscixcos_disable_la_CFLAGS = -Iincludes/ \
+			-I$(top_srcdir)/modules/output_stream/includes
+
+XCOS_DISABLE_C_SOURCES = src/noxcos/noxcos.c
+libscixcos_disable_la_LDFLAGS = -version-info $(SCILAB_LIBRARY_VERSION) $(LD_FLAGS)
+libscixcos_disable_la_SOURCES = $(XCOS_DISABLE_C_SOURCES)
+pkglib_LTLIBRARIES = libscixcos-disable.la $(am__append_1)
+libscixcos_la_LDFLAGS = -version-info $(SCILAB_LIBRARY_VERSION) $(LD_FLAGS)  $(X_LIBS) $(X_EXTRA_LIBS)
+libscixcos_la_SOURCES = $(XCOS_C_SOURCES) $(GATEWAY_C_SOURCES) $(GATEWAY_CPP_SOURCES) $(XCOS_CPP_SOURCES)
+
+# For the code check (splint)
+CHECK_SRC = $(XCOS_C_SOURCES) $(GATEWAY_C_SOURCES)
+INCLUDE_FLAGS = $(libscixcos_la_CFLAGS)
+libscixcos_la_LIBADD = $(top_builddir)/modules/core/libscicore.la \
+$(top_builddir)/libs/MALLOC/libscimalloc.la \
+$(top_builddir)/modules/output_stream/libscioutput_stream.la
+
+
+#### xcos : gateway declaration ####
+libscixcos_la_sci_gatewaydir = $(mydatadir)/sci_gateway
+libscixcos_la_sci_gateway_DATA = sci_gateway/xcos_gateway.xml
+
+#### xcos : include files ####
+libscixcos_la_includedir = $(pkgincludedir)/xcos
+libscixcos_la_include_HEADERS = includes/gw_xcos.h \
+includes/dynlib_xcos.h \
+includes/callxcos.h
+
+@GUI_TRUE@@HDF5_TRUE@USEANT = 1
 
 # Where all the Scilab stuff is installed (macros, help, ...)
 mydatadir = $(pkgdatadir)/modules/$(modulename)
@@ -430,7 +494,7 @@ SPLINT_OPTIONS = -weak -booltype BOOL
 #### the procedure will be the same with Microsoft Windows (C)
 #### and Linux/Unix
 #######################################################################
-TARGETS_ALL = $(am__append_1)
+TARGETS_ALL = $(am__append_2)
 
 ################ MACROS ######################
 # Rule to build a macro
@@ -481,70 +545,6 @@ JARMASK = *.jar
 HELP_CHAPTERDIR = help/
 HELP_CHAPTERFILE = addchapter.sce
 HELP_CHAPTERLANG = en_US fr_FR pt_BR
-XCOS_C_SOURCES = 
-XCOS_CPP_SOURCES = src/cpp/callxcos.cpp \
-			src/jni/Xcos.cpp \
-			src/jni/Xcos.hxx \
-			src/jni/Signal.cpp \
-			src/jni/Signal.hxx
-
-GIWS_WRAPPERS = Xcos.giws.xml \
-XcosUtils.giws.xml
-
-@GIWS_TRUE@BUILT_SOURCES = giws
-GATEWAY_C_SOURCES = sci_gateway/c/gw_xcos.c
-GATEWAY_CPP_SOURCES = sci_gateway/cpp/sci_Xcos.cpp \
-sci_gateway/cpp/sci_xcosNotify.cpp 
-
-libscixcos_la_CFLAGS = $(JAVA_JNI_INCLUDE) \
-			-I$(top_srcdir)/libs/MALLOC/includes/ \
-			-I$(top_srcdir)/modules/jvm/includes/ \
-			-I$(top_srcdir)/modules/output_stream/includes \
-			-I$(top_srcdir)/modules/localization/includes \
-			-I$(top_srcdir)/modules/api_scilab/includes	
-
-libscixcos_la_CPPFLAGS = $(JAVA_JNI_INCLUDE) \
-			-I$(srcdir)/includes/ \
-			-I$(srcdir)/src/jni/ \
-			-I$(srcdir)/src/cpp/ \
-			-I$(srcdir)/src/c/ \
-	 		-I$(top_srcdir)/modules/jvm/includes/ \
-			-I$(top_srcdir)/modules/output_stream/includes \
-			-I$(top_srcdir)/modules/localization/includes \
-                        -I$(top_srcdir)/modules/scicos_blocks/src/jni \
-			-I$(top_srcdir)/modules/api_scilab/includes
-
-
-# Without the xcos module 
-libscixcos_disable_la_CFLAGS = -Iincludes/ \
-			-I$(top_srcdir)/modules/output_stream/includes
-
-XCOS_DISABLE_C_SOURCES = src/noxcos/noxcos.c
-libscixcos_disable_la_LDFLAGS = -version-info $(SCILAB_LIBRARY_VERSION) $(LD_FLAGS)
-libscixcos_disable_la_SOURCES = $(XCOS_DISABLE_C_SOURCES)
-pkglib_LTLIBRARIES = libscixcos-disable.la $(am__append_2)
-libscixcos_la_LDFLAGS = -version-info $(SCILAB_LIBRARY_VERSION) $(LD_FLAGS)  $(X_LIBS) $(X_EXTRA_LIBS)
-libscixcos_la_SOURCES = $(XCOS_C_SOURCES) $(GATEWAY_C_SOURCES) $(GATEWAY_CPP_SOURCES) $(XCOS_CPP_SOURCES)
-
-# For the code check (splint)
-CHECK_SRC = $(XCOS_C_SOURCES) $(GATEWAY_C_SOURCES)
-INCLUDE_FLAGS = $(libscixcos_la_CFLAGS)
-libscixcos_la_LIBADD = $(top_builddir)/modules/core/libscicore.la \
-$(top_builddir)/libs/MALLOC/libscimalloc.la \
-$(top_builddir)/modules/output_stream/libscioutput_stream.la
-
-
-#### xcos : gateway declaration ####
-libscixcos_la_sci_gatewaydir = $(mydatadir)/sci_gateway
-libscixcos_la_sci_gateway_DATA = sci_gateway/xcos_gateway.xml
-
-#### xcos : include files ####
-libscixcos_la_includedir = $(pkgincludedir)/xcos
-libscixcos_la_include_HEADERS = includes/gw_xcos.h \
-includes/dynlib_xcos.h \
-includes/callxcos.h
-
-@GUI_TRUE@@HDF5_TRUE@USEANT = 1
 all: $(BUILT_SOURCES)
 	$(MAKE) $(AM_MAKEFLAGS) all-am
 
