--- a/scilab/modules/Makefile.in
+++ b/scilab/modules/Makefile.in
@@ -155,10 +155,10 @@ DIST_SUBDIRS = core output_stream action_binding arnoldi \
 	optimization symbolic randlib statistics special_functions \
 	interpolation linear_algebra integer data_structures mexlib \
 	differential_equations cacsd polynomials boolean double pvm io \
-	intersci metanet signal_processing call_scilab sound time \
-	sparse windows_tools functions overloading maple2scilab m2sci \
-	texmacs development_tools compatibility_functions helptools \
-	fftw umfpack demo_tools genetic_algorithms simulated_annealing \
+	intersci signal_processing call_scilab sound time sparse \
+	windows_tools functions overloading maple2scilab m2sci texmacs \
+	development_tools compatibility_functions helptools fftw \
+	umfpack demo_tools genetic_algorithms simulated_annealing \
 	parameters matio atoms hdf5 xcos xpad scicos_blocks scicos . \
 	javasci
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
@@ -431,13 +431,12 @@ SUBDIRS = core output_stream action_binding arnoldi \
 	optimization symbolic randlib statistics special_functions \
 	interpolation linear_algebra integer data_structures mexlib \
 	differential_equations cacsd polynomials boolean double pvm io \
-	intersci metanet signal_processing core call_scilab \
-	interpolation sound time randlib sparse windows_tools \
-	functions overloading maple2scilab m2sci texmacs \
-	development_tools compatibility_functions helptools fftw \
-	umfpack demo_tools genetic_algorithms simulated_annealing \
-	parameters matio atoms hdf5 xcos xpad $(am__append_1) scicos . \
-	$(am__append_2)
+	intersci signal_processing core call_scilab interpolation \
+	sound time randlib sparse windows_tools functions overloading \
+	maple2scilab m2sci texmacs development_tools \
+	compatibility_functions helptools fftw umfpack demo_tools \
+	genetic_algorithms simulated_annealing parameters matio atoms \
+	hdf5 xcos xpad $(am__append_1) scicos . $(am__append_2)
 
 #### Basic files ####
 libscilab_la_rootdir = $(mydatadir)
@@ -510,7 +509,6 @@ ENGINE_LIBS = $(top_builddir)/modules/fileio/libscifileio.la \
 # These libraries are loaded dynamically from Scilab.
 ENGINE_LIBS_DYNAMIC_LOAD = \
 	$(top_builddir)/modules/optimization/libscioptimization.la \
-	$(top_builddir)/modules/metanet/libscimetanet.la \
 	$(top_builddir)/modules/signal_processing/libscisignal_processing.la \
 	$(top_builddir)/modules/interpolation/libsciinterpolation.la \
 	$(top_builddir)/modules/symbolic/libscisymbolic.la \
