linux compilation, connect affich2.cpp

--- a/scilab/modules/scicos_blocks/Makefile.am
+++ b/scilab/modules/scicos_blocks/Makefile.am
@@ -320,7 +320,8 @@ src/c/writeau.c \
 src/c/writec.c \
 src/c/zcross2.c
 
-SCICOS_BLOCK_CPP_SOURCES = src/jni/XcosDiagram.cpp
+SCICOS_BLOCKS_CPP_SOURCES = \
+src/cpp/affich2.cpp
 
 NON_BLOCK_C_SOURCES =  src/c/scoGetProperty.c \
 src/c/scoSetProperty.c \
@@ -329,7 +330,10 @@ src/c/scoMemoryScope.c\
 src/c/scoWindowScope.c \
 src/c/affich.c
 
-SCICOS_BLOCKS_FORTRAN_SOURCES = src/fortran/affich2.f \
+NON_BLOCK_CPP_SOURCES = \
+src/jni/XcosDiagram.cpp
+
+SCICOS_BLOCKS_FORTRAN_SOURCES = \
 src/fortran/affich.f \
 src/fortran/constraint.f \
 src/fortran/csslti.f \
@@ -413,6 +417,7 @@ libsciscicos_blocks_la_CPPFLAGS = $(JAVA_JNI_INCLUDE) \
 			-I$(srcdir)/src/jni/ \
 			-I$(srcdir)/src/cpp/ \
 			-I$(srcdir)/src/c/ \
+			-I$(top_srcdir)/libs/MALLOC/includes/ \
 	 		-I$(top_srcdir)/modules/jvm/includes/ \
 			-I$(top_srcdir)/modules/output_stream/includes \
 			-I$(top_srcdir)/modules/localization/includes \
@@ -421,7 +426,8 @@ libsciscicos_blocks_la_CPPFLAGS = $(JAVA_JNI_INCLUDE) \
 libsciscicos_blocks_la_SOURCES = $(SCICOS_BLOCKS_C_SOURCES) \
 $(SCICOS_BLOCKS_FORTRAN_SOURCES) \
 $(NON_BLOCK_C_SOURCES) \
-$(SCICOS_BLOCK_CPP_SOURCES)
+$(NON_BLOCK_CPP_SOURCES) \
+$(SCICOS_BLOCKS_CPP_SOURCES)
 
 
 # For the code check (splint)
@@ -441,19 +447,26 @@ build/Cblocknames:Makefile.am
 # Get the filename, strip the extension and put into a file
 	@for file in $(SCICOS_BLOCKS_C_SOURCES); do echo $$file |sed  's|.*/\([0-9A-Za-z_-]*\)\.c|\1|' ;done > build/Cblocknames
 
+build/CPPblocknames:Makefile.am
+	@echo "-- Generates build/CPPblocknames --"
+	@if test ! -d build; then mkdir build; fi
+# Get the filename, strip the extension and put into a file
+	@for file in $(SCICOS_BLOCKS_CPP_SOURCES); do echo $$file |sed  's|.*/\([0-9A-Za-z_-]*\)\.cpp|\1|' ;done > build/CPPblocknames
+
 build/Fblocknames: Makefile.am
 	@echo "-- Generates build/Fblocknames --"
 	@if test ! -d build; then mkdir build; fi
 # Get the filename, strip the extension and put into a file
 	@for file in $(SCICOS_BLOCKS_FORTRAN_SOURCES); do echo $$file |sed  's|.*/\([0-9A-Za-z_-]*\)\.f|\1|';done > build/Fblocknames
 
-includes/blocks.h: build/Cblocknames build/Fblocknames
+includes/blocks.h: build/Cblocknames build/Fblocknames build/CPPblocknames
 	@echo "-- Building includes/blocks.h --"
-	@$(top_srcdir)/modules/scicos_blocks/src/scripts/GenBlocks.sh $(top_srcdir)/modules/scicos_blocks/build/Fblocknames $(top_srcdir)/modules/scicos_blocks/build/Cblocknames $(top_srcdir)/modules/scicos_blocks/includes/blocks.h
+	@$(top_srcdir)/modules/scicos_blocks/src/scripts/GenBlocks.sh $(top_srcdir)/modules/scicos_blocks/build/Fblocknames $(top_srcdir)/modules/scicos_blocks/build/Cblocknames $(top_srcdir)/modules/scicos_blocks/build/CPPblocknames $(top_srcdir)/modules/scicos_blocks/includes/blocks.h
 
 CLEANFILES=$(top_srcdir)/modules/scicos_blocks/includes/blocks.h \
 	$(top_srcdir)/modules/scicos_blocks/build/Cblocknames \
 	$(top_srcdir)/modules/scicos_blocks/build/Fblocknames \
+	$(top_srcdir)/modules/scicos_blocks/build/CPPblocknames \
 	$(srcdir)/macros/Electrical/*.moc \
     $(srcdir)/macros/*/models \
 	$(srcdir)/macros/Hydraulics/*.moc \
