--- a/scilab/modules/xpad/Makefile.in
+++ b/scilab/modules/xpad/Makefile.in
@@ -130,7 +130,8 @@ am__objects_3 = libscixpad_la-ScilabKeywords_wrap.lo
 am__objects_4 = libscixpad_la-gw_xpad.lo
 am__objects_5 = libscixpad_la-sci_xpad.lo \
 	libscixpad_la-sci_xpad_highlightline.lo
-am__objects_6 = libscixpad_la-Xpad.lo libscixpad_la-callxpad.lo
+am__objects_6 = libscixpad_la-Xpad.lo libscixpad_la-callxpad.lo \
+	libscixpad_la-GiwsException.lo
 am_libscixpad_la_OBJECTS = $(am__objects_2) $(am__objects_3) \
 	$(am__objects_4) $(am__objects_5) $(am__objects_6)
 libscixpad_la_OBJECTS = $(am_libscixpad_la_OBJECTS)
@@ -481,7 +482,10 @@ HELP_CHAPTERFILE = addchapter.sce
 HELP_CHAPTERLANG = en_US fr_FR pt_BR
 XPAD_JNI_SOURCES = src/jni/ScilabKeywords_wrap.c
 XPAD_C_SOURCES = src/c/ScilabKeywords.c
-XPAD_CPP_SOURCES = src/jni/Xpad.cpp src/cpp/callxpad.cpp
+XPAD_CPP_SOURCES = src/jni/Xpad.cpp \
+	src/cpp/callxpad.cpp \
+	src/jni/GiwsException.cpp
+
 GIWS_WRAPPERS = src/jni/Xpad.giws.xml
 @GIWS_TRUE@BUILT_SOURCES = giws
 @SWIG_TRUE@BUILT_SOURCES = swig
@@ -615,6 +619,7 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscixpad_disable_la-noxpad.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscixpad_la-GiwsException.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscixpad_la-ScilabKeywords.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscixpad_la-ScilabKeywords_wrap.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscixpad_la-Xpad.Plo@am__quote@
@@ -720,6 +725,13 @@ libscixpad_la-callxpad.lo: src/cpp/callxpad.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/cpp/callxpad.cpp' object='libscixpad_la-callxpad.lo' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(LIBTOOL)  --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libscixpad_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libscixpad_la-callxpad.lo `test -f 'src/cpp/callxpad.cpp' || echo '$(srcdir)/'`src/cpp/callxpad.cpp
+
+libscixpad_la-GiwsException.lo: src/jni/GiwsException.cpp
+@am__fastdepCXX_TRUE@	$(LIBTOOL)  --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libscixpad_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libscixpad_la-GiwsException.lo -MD -MP -MF $(DEPDIR)/libscixpad_la-GiwsException.Tpo -c -o libscixpad_la-GiwsException.lo `test -f 'src/jni/GiwsException.cpp' || echo '$(srcdir)/'`src/jni/GiwsException.cpp
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/libscixpad_la-GiwsException.Tpo $(DEPDIR)/libscixpad_la-GiwsException.Plo
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/jni/GiwsException.cpp' object='libscixpad_la-GiwsException.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(LIBTOOL)  --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libscixpad_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libscixpad_la-GiwsException.lo `test -f 'src/jni/GiwsException.cpp' || echo '$(srcdir)/'`src/jni/GiwsException.cpp
 
 mostlyclean-libtool:
 	-rm -f *.lo
