--- a/scilab/modules/scicos_blocks/src/c/scicos_blocks.vcproj
+++ b/scilab/modules/scicos_blocks/src/c/scicos_blocks.vcproj
@@ -392,7 +392,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\affich2.cpp"
+				RelativePath="..\cpp\affich2.cpp"
 				>
 			</File>
 			<File
