--- a/scilab/etc/modules.xml.in
+++ b/scilab/etc/modules.xml.in
@@ -83,4 +83,5 @@
 <module name="hdf5" activate="yes"/>
 <module name="xcos" activate="@GUI_ENABLE@"/>
 <module name="xpad" activate="@GUI_ENABLE@"/>
+<module name="mpi" activate="@MPI_ENABLE@"/>
 </modules>
