--- a/scilab/modules/gui/src/c/gui.vcproj
+++ b/scilab/modules/gui/src/c/gui.vcproj
@@ -654,6 +654,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\sci_gateway\cpp\sci_about.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\sci_gateway\c\sci_ClipBoard.c"
 				>
 			</File>
